--- a/locales/en-UK.yml
+++ b/locales/en-UK.yml
@@ -6,24 +6,29 @@ api:
     invalid:
         FILETYPE: Invalid file type.
         USER: Invalid user ID.
-        TOKEN: Invalid or missing authorisation token.
+        URL: That URL is invalid.
+        URL_EXISTS: That URL has already been shortened.
+        TOKEN: Invalid or missing authorization token.
         PASSWORD: Password is not correct.
         USERNAME_TAKEN: Username is already taken.
 
     not_found:
         USER: User not found.
         FILE: File not found.
+        URL: URL not found.
 
     no_perms:
         FILE: You do not own this file.
-        CREATE_USER: You're not authorised to create users.
-        EDIT_USER: You're not authorised to edit this account.
-        DELETE_USER: You're not authorised to delete users.
-        TOKEN_RESET: You're not authorised to reset this account's token.
-        CREATE_ADMIN: You're not authorised to create Administrator users, please pass admin as false.
+        URL: You do not own this URL.
+        CREATE_USER: You're not authorized to create users.
+        EDIT_USER: You're not authorized to edit this account.
+        DELETE_USER: You're not authorized to delete users.
+        TOKEN_RESET: You're not authorized to reset this account's token.
+        CREATE_ADMIN: You're not authorized to create Administrator users, please pass admin as false.
 
     success:
         DELETE_FILE: File deleted successfully.
+        DELETE_URL: URL deleted successfully.
         RESTORE_FILE: That file has been restored.
         PASSWORD: Password is correct.
         CREATE_USER: User was successfully created.
@@ -39,6 +44,7 @@ admin:
         USERS: Users
         FILES: Files
         ARCHIVE: Archive
+        URLS: URLs
 
     form:
         USERNAME: USERNAME
@@ -48,7 +54,9 @@ admin:
 
     tables:
         FILE_ID: File ID
+        URL_ID: URL ID
         DISCRIMINATOR: Discriminator
+        LINKS_TO: Links To
         AUTHOR: Author
         UPLOAD_DATE: Upload Date
 
@@ -60,10 +68,12 @@ admin:
         ACTIONS: Actions
         NO_FILE_ACTIONS: No actions available for this file.
         NO_USER_ACTIONS: No actions available for this user.
+        NO_URL_ACTIONS: No actions available for this URL.
 
     buttons:
         EDIT_USER: Edit User
         DELETE_FILE: Delete File
+        DELETE_URL: Delete URL
         RESTORE_FILE: Restore File
         CREATE_USER: Create User
 
@@ -92,8 +102,8 @@ errors:
     429:
         TITLE: 429 - Too many requests
         CODE: 429 - You're being ratelimited
-        HEADER: "'Ello 'ello 'ello! We just caught you speedin'!"
-        CONTENT: The speed limit is clearly 60 mph, you were doing 61...
+        HEADER: "Good day sir/ma'am. License & registration please?"
+        CONTENT: That'll a $5000 fine for speedin', yuh know?
         EMOTICON: ┻━┻ ﾐヽ(ಠ益ಠ)ノ彡┻━┻
 
     500:
@@ -117,6 +127,7 @@ home:
         PROJECT_TITLE: Project Imago
         ACCOUNT: Account
         FILES: Files
+        URLS: URLs
 
     form:
         USERNAME: USERNAME
@@ -128,6 +139,7 @@ home:
 
     tables:
         FILE_ID: File ID
+        URL_ID: URL ID
         DISCRIMINATOR: Discriminator
         UPLOAD_DATE: Upload Date
         ACTIONS: Actions
@@ -137,6 +149,7 @@ home:
         REGEN_TOKEN: Renew
         SAVE_CHANGES: Save Changes
         DELETE_FILE: Delete File
+        DELETE_URL: Delete URL
 
 login:
     TITLE: Imago - Login
